fix: heade z-index

--- a/src/components/Layout/MainLayout/MainLayout.module.scss
+++ b/src/components/Layout/MainLayout/MainLayout.module.scss
@@ -1,6 +1,7 @@
 .root {
   min-height: 100vh;
   width: 100vw;
+  z-index: 10;
 }
 
 .headerWrapper {
@@ -8,6 +9,7 @@
   top: 0;
   left: 0;
   width: 100vw;
+  z-index: 9;
 }
 
 .contentWrapper {
